Added UNet training data preparation support.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -107,7 +107,7 @@
    "outputs": [],
    "source": [
     "dask_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"4GB\"\n",
+    "    walltime=\"04:00:00\", local=False, n_workers=40, memory=\"2GB\"\n",
     ")\n",
     "dask_controller.startdask()\n",
     "dask_controller.daskcluster.start_workers()"
@@ -135,7 +135,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(nd2file, headpath)"
+    "hdf5_extractor = tr.ndextract.hdf5_fov_extractor(nd2file, headpath, tpts_per_file=25)"
    ]
   },
   {
@@ -144,9 +144,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "hdf5_extractor.writemetadata()\n",
-    "fov_list = hdf5_extractor.exp_metadata[\"fields_of_view\"]\n",
-    "dask_controller.mapfovs(hdf5_extractor.extract_fov, fov_list)"
+    "hdf5_extractor.extract(dask_controller)"
    ]
   },
   {
@@ -221,9 +219,7 @@
    "source": [
     "matplotlib.rcParams[\"figure.figsize\"] = [20, 10]\n",
     "interactive_kymograph = tr.interactive.kymograph_interactive(headpath)\n",
-    "channels, shape, all_fov_list, timepoints_len = interactive_kymograph.get_image_params(\n",
-    "    0\n",
-    ")"
+    "channels, fov_list, timepoints_len = interactive_kymograph.get_image_params()"
    ]
   },
   {
@@ -255,7 +251,7 @@
     "    {\"manual\": True},\n",
     "    all_channels=fixed(channels),\n",
     "    seg_channel=Dropdown(options=channels, value=channels[0]),\n",
-    "    fov_list=SelectMultiple(options=all_fov_list),\n",
+    "    fov_list=SelectMultiple(options=fov_list),\n",
     "    t_range=IntRangeSlider(\n",
     "        value=[0, timepoints_len - 1],\n",
     "        min=0,\n",
@@ -356,10 +352,6 @@
     "\n",
     "This method uses the following `kwargs`, which you can tune here:\n",
     "\n",
-    "**triangle_nbins (int)** : Number of bins to use in the triangle method histogram.\n",
-    "\n",
-    "**triangle_scaling (float)** : Scaling factor to apply to the threshold determined by the triangle method.\n",
-    "\n",
     "**y_min_edge_dist (int)** : Minimum row length necessary for detection.\n",
     "\n",
     "**padding_y (int)** : Padding to be used when cropping in the y-dimension.\n",
@@ -385,8 +377,6 @@
     "    {\"manual\": True},\n",
     "    y_percentiles_smoothed_list=fixed(y_percentiles_smoothed_list),\n",
     "    imported_array_list=fixed(imported_array_list),\n",
-    "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    triangle_scaling=FloatSlider(value=1.05, min=0.0, max=4.0, step=0.05),\n",
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
     "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
@@ -509,10 +499,6 @@
     "\n",
     "This method uses the following `kwargs`, which you can tune here:\n",
     "\n",
-    "**otsu_nbins (int)** : Number of bins to use in the Otsu's method histogram.\n",
-    "\n",
-    "**otsu_scaling (float)** : Scaling factor to apply to the threshold determined by Otsu's method.\n",
-    "\n",
     "**vertical_spacing (float)** : Parameter for setting the distance of plots being viewed.\n",
     "\n",
     "Running the following widget will display the detected midpoints for each of your timepoints. If there is too much sparsity, or discontinuity, your drift correction will not be accurate."
@@ -528,8 +514,6 @@
     "    interactive_kymograph.preview_midpoints,\n",
     "    {\"manual\": True},\n",
     "    smoothed_x_percentiles_list=fixed(smoothed_x_percentiles_list),\n",
-    "    otsu_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    otsu_scaling=FloatSlider(value=0.25, min=0.0, max=2.0, step=0.01),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")\n",
     "display(midpoint_drift)"
@@ -554,24 +538,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "corrected_midpoints = interactive(\n",
-    "    interactive_kymograph.preview_corrected_midpoints,\n",
-    "    {\"manual\": True},\n",
-    "    all_midpoints_list=fixed(all_midpoints_list),\n",
-    "    x_drift_list=fixed(x_drift_list),\n",
-    "    trench_width_x=IntSlider(value=30, min=10, max=50, step=1),\n",
-    "    trench_present_thr=FloatSlider(value=0.0, min=0.0, max=1.0, step=0.05),\n",
-    "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
-    ")\n",
-    "display(corrected_midpoints)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -585,7 +551,9 @@
     "\n",
     "**vertical_spacing (float)** : Parameter for setting the distance of plots being viewed.\n",
     "\n",
-    "Running the following widget will display a random kymograph for each row in each fov."
+    "Running the following widget will display a random kymograph for each row in each fov.\n",
+    "\n",
+    "It will also produce midpoint plots showing retained midpoints"
    ]
   },
   {
@@ -600,7 +568,7 @@
     "    cropped_in_y_list=fixed(cropped_in_y_list),\n",
     "    all_midpoints_list=fixed(all_midpoints_list),\n",
     "    x_drift_list=fixed(x_drift_list),\n",
-    "    trench_width_x=IntSlider(value=30, min=10, max=50, step=1),\n",
+    "    trench_width_x=IntSlider(value=30, min=10, max=50, step=2),\n",
     "    trench_present_thr=FloatSlider(value=0.0, min=0.0, max=1.0, step=0.05),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")"
@@ -675,7 +643,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo = tr.kymograph.kychunker(headpath=headpath, paramfile=True)"
+    "kymoclust = tr.kymograph.kymograph_cluster(\n",
+    "    headpath=headpath, trenches_per_file=20, paramfile=True\n",
+    ")"
    ]
   },
   {
@@ -684,7 +654,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.dask_full_kymograph(dask_controller)"
+    "kymoclust.generate_kymographs(dask_controller)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymoclust.post_process(dask_controller)"
    ]
   },
   {
@@ -700,7 +679,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kymo.kymo_report()"
+    "kymoclust.kymo_report()"
    ]
   },
   {
@@ -725,7 +704,7 @@
     "toc-hr-collapsed": true
    },
    "source": [
-    "## Segmentation"
+    "## Fluorescence Segmentation"
    ]
   },
   {
@@ -815,7 +794,6 @@
     "kymo_arr_int = interactive(\n",
     "    interactive_segmentation.import_array,\n",
     "    {\"manual\": True},\n",
-    "    fov_idx=IntText(value=0, description=\"FOV number:\", disabled=False),\n",
     "    n_trenches=IntText(value=1, description=\"Number of trenches:\", disabled=False),\n",
     "    t_range=IntRangeSlider(\n",
     "        value=[\n",
@@ -836,6 +814,9 @@
     "    ),\n",
     "    fig_size_x=IntSlider(\n",
     "        value=6, description=\"Figure Size (X Dimension):\", min=1, max=30, step=1\n",
+    "    ),\n",
+    "    img_per_row=IntSlider(\n",
+    "        value=2, description=\"Images per Row:\", min=1, max=30, step=1\n",
     "    ),\n",
     ")\n",
     "display(kymo_arr_int)"
@@ -1210,7 +1191,7 @@
    "outputs": [],
    "source": [
     "dask_controller = tr.cluster.dask_controller(\n",
-    "    walltime=\"01:00:00\", local=False, n_workers=40, memory=\"1GB\"\n",
+    "    walltime=\"01:00:00\", local=False, n_workers=100, memory=\"500MB\"\n",
     ")\n",
     "dask_controller.startdask()\n",
     "dask_controller.daskcluster.start_workers()"
@@ -1242,6 +1223,127 @@
    "source": [
     "segment.dask_segment(dask_controller)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": false
+   },
+   "source": [
+    "## Phase Segmentation Training"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
+    "### Data Preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader = tr.unet.UNet_Training_DataLoader(\n",
+    "    nndatapath=\"/n/scratch2/de64/nntest\",\n",
+    "    trainpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
+    "    testpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
+    "    valpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Training Set Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.inter_get_selection(dataloader.trainpath, \"train\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.export_data(\"train\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Test Set Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.inter_get_selection(dataloader.testpath, \"test\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.export_data(\"test\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Validation Set Selection"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.inter_get_selection(dataloader.valpath, \"val\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.export_data(\"val\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Hyperparameter (Grid) Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
