--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -144,6 +144,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "hdf5_extractor.inter_get_notes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "hdf5_extractor.extract(dask_controller)"
    ]
   },
