--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
@@ -175,7 +175,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
     "## Kymographs"
@@ -269,7 +269,7 @@
     "        disabled=False,\n",
     "        continuous_update=False,\n",
     "    ),\n",
-    "    t_subsample_step=IntSlider(value=10, min=0, max=200, step=10),\n",
+    "    t_subsample_step=IntSlider(value=10, min=0, max=200, step=1),\n",
     ")\n",
     "display(import_hdf5)"
    ]
@@ -710,7 +710,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
     "## Fluorescence Segmentation"
@@ -935,6 +935,17 @@
    "source": [
     "proc_list = copy.copy(proc_list_int.result)\n",
     "eigval_list = interactive_segmentation.plot_eigval(proc_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from matplotlib import pyplot as plt\n",
+    "\n",
+    "plt.imshow(eigval_list[3] > 125)"
    ]
   },
   {
@@ -1409,9 +1420,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "mothermachine",
+   "display_name": "Python 3",
    "language": "python",
-   "name": "mothermachine"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -1423,7 +1434,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.7.1"
   },
   "toc-showtags": false
  },
