--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
@@ -175,7 +175,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "## Kymographs"
@@ -710,7 +710,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "## Fluorescence Segmentation"
@@ -1247,7 +1247,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": false
+    "toc-hr-collapsed": true
    },
    "source": [
     "## Phase Segmentation Training"
@@ -1269,7 +1269,8 @@
    "outputs": [],
    "source": [
     "dataloader = tr.unet.UNet_Training_DataLoader(\n",
-    "    nndatapath=\"/n/scratch2/de64/nntest\",\n",
+    "    nndatapath=\"/n/scratch2/de64/nntest5\",\n",
+    "    experimentname=\"First NN\",\n",
     "    trainpath=\"/n/scratch2/de64/2019-06-18_DE85_training_data\",\n",
     "    testpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
     "    valpath=\"/n/scratch2/de64/2019-05-31_validation_data\",\n",
@@ -1293,15 +1294,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataloader.export_data(\"train\")"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -1315,15 +1307,6 @@
    "outputs": [],
    "source": [
     "dataloader.inter_get_selection(dataloader.testpath, \"test\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dataloader.export_data(\"test\")"
    ]
   },
   {
@@ -1343,20 +1326,132 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Weightmap Parameters"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "dataloader.export_data(\"val\")"
+    "dataloader.display_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.get_grid_params()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "#### Export"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dataloader.export_all_data(memory=\"6GB\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "toc-hr-collapsed": true
+   },
+   "source": [
     "### Hyperparameter (Grid) Search"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Set-up Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid = tr.unet.GridSearch(\"/n/scratch2/de64/nntest4\", numepochs=50)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.display_grid()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.get_grid_params()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Run Search"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "grid.run_grid_search()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
