Add metadata key recognition

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -46,6 +46,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from nd2reader import ND2Reader"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import nd2reader\n",
+    "\n",
+    "dir(nd2reader)\n",
+    "print(nd2reader.__version__)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -60,8 +81,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "headpath = \"/n/scratch2/de64/2019-06-18_DE85_training_data\"\n",
-    "nd2file = \"/n/scratch2/de64/2019-06-18_DE85_training_data/bde17_gotime.nd2\""
+    "headpath = \"/n/scratch2/bj66/vibrio_analysis_evaluation\"\n",
+    "nd2file = \"/n/scratch2/bj66/vibrio_analysis_evaluation/Vibrio_30_MUX002.nd2\""
    ]
   },
   {
@@ -79,8 +100,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Daniel/Image_Data/Bacillus_Project/2019-06-18_DE85_training_data\"\n",
-    "targetdir = \"/n/scratch2/de64/2019-06-18_DE85_training_data\"\n",
+    "sourcedir = \"/n/files/SysBio/PAULSSON\\ LAB/Personal\\ Folders/Leoncini/DATA_Ti4/20190924--Vibrio30_MUX/test\"\n",
+    "targetdir = \"/n/scratch2/bj66/vibrio_analysis_evaluation\"\n",
     "tr.cluster.transferjob(sourcedir, targetdir)"
    ]
   },
@@ -250,6 +271,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<i> Could this be made more robust? E.g. edge detection </i>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -348,6 +376,15 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_percentiles_smoothed_list[0].shape"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -365,7 +402,7 @@
     "\n",
     "**padding_y (int)** : Padding to be used when cropping in the y-dimension.\n",
     "\n",
-    "**trench_len_y (int)** : Length from the end of the tenches to be used when cropping in the y-dimension.\n",
+    "**trench_len_y (int)** : Length from the end of the tenches to be used when cropping in the y-dimension. <i> why can't this just be found using the edge nearest to the feeding channel? </i>\n",
     "\n",
     "**top_orientation (int)** : The orientation of the top-most row where 0 corresponds to a trench with a downward-oriented trench opening and 1 corresponds to a trench with an upward-oriented trench opening.\n",
     "\n",
@@ -388,7 +425,7 @@
     "    imported_array_list=fixed(imported_array_list),\n",
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
-    "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
+    "    trench_len_y=IntText(value=270, description=\"Trench Length (y)\"),\n",
     "    vertical_spacing=FloatSlider(value=0.9, min=0.0, max=2.0, step=0.01),\n",
     "    expected_num_rows=IntText(value=2, description=\"Number of Rows:\", disabled=False),\n",
     "    orientation_detection=Dropdown(\n",
@@ -514,6 +551,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<i> Number/trench interest point registration (SIFT)? Autocorrelation? Single-dimension Euclidean distances between intensity maps of trench-sized boxes?</i>"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -577,10 +621,17 @@
     "    cropped_in_y_list=fixed(cropped_in_y_list),\n",
     "    all_midpoints_list=fixed(all_midpoints_list),\n",
     "    x_drift_list=fixed(x_drift_list),\n",
-    "    trench_width_x=IntSlider(value=30, min=10, max=50, step=2),\n",
+    "    trench_width_x=IntSlider(value=30, min=10, max=100, step=2),\n",
     "    trench_present_thr=FloatSlider(value=0.0, min=0.0, max=1.0, step=0.05),\n",
     "    vertical_spacing=FloatSlider(value=0.8, min=0.0, max=2.0, step=0.01),\n",
     ")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<i> Why do we store data as kymographs? </i>"
    ]
   },
   {
