--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Master.ipynb
@@ -322,9 +322,17 @@
     "    {\"manual\": True},\n",
     "    imported_array_list=fixed(imported_array_list),\n",
     "    y_percentile=IntSlider(value=100, min=0, max=100, step=1),\n",
-    "    smoothing_kernel_y_dim_0=IntSlider(value=17, min=1, max=20, step=1),\n",
-    "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
+    "    smoothing_kernel_y_dim_0=IntSlider(value=17, min=1, max=200, step=2),\n",
+    "    triangle_nbins=IntSlider(value=50, min=10, max=300, step=10),\n",
     "    triangle_scaling=FloatSlider(value=3.5, min=0.0, max=4.0, step=0.05),\n",
+    "    triangle_threshold_bounds=IntRangeSlider(\n",
+    "        value=[0, 5000],\n",
+    "        min=0,\n",
+    "        max=5000,\n",
+    "        step=50,\n",
+    "        disabled=False,\n",
+    "        continuous_update=False,\n",
+    "    ),\n",
     ")\n",
     "display(row_detection)"
    ]
