Edits from Bill and stability fix.

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Master.ipynb
@@ -24,6 +24,7 @@
    "source": [
     "import trenchripper as tr\n",
     "\n",
+    "\n",
     "from ipywidgets import (\n",
     "    interact,\n",
     "    interactive,\n",
@@ -175,7 +176,7 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "toc-hr-collapsed": true
+    "toc-hr-collapsed": false
    },
    "source": [
     "## Kymographs"
