Add cell property measurements and need to fix regionprop extraction

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/phase_seg_test.ipynb
@@ -427,24 +427,15 @@
    "outputs": [],
    "source": [
     "dc = dask_controller(\n",
-    "    walltime=\"8:00:00\",\n",
+    "    walltime=\"10:00:00\",\n",
     "    local=False,\n",
     "    n_workers=100,\n",
-    "    memory=\"4GB\",\n",
+    "    memory=\"6GB\",\n",
     "    death_timeout=120.0,\n",
     "    working_directory=headpath + \"/dask\",\n",
     ")\n",
     "dc.startdask()\n",
     "dc.daskcluster.start_workers()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "dc.daskcluster.scale(n=100)"
    ]
   },
   {
@@ -495,8 +486,35 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lost_count = 0\n",
     "for key, value in dc.futures.items():\n",
-    "    if value.status == \"finished\":\n",
+    "    if value.status == \"lost\":\n",
+    "        print(key)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "kymodf = segmenter.meta_handle.read_df(\"kymograph\", read_metadata=True)\n",
+    "metadata = kymodf.metadata\n",
+    "#         width = metadata['kymograph_params']['trench_width_x']\n",
+    "#         height = metadata['kymograph_params']['ttl_len_y']\n",
+    "file_list = kymodf[\"File Index\"].unique().tolist()\n",
+    "num_file_jobs = len(file_list)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lost_count = 0\n",
+    "for key, value in dc.futures.items():\n",
+    "    if value.status == \"lost\":\n",
     "        print(key)"
    ]
   },
@@ -518,8 +536,17 @@
     "import random\n",
     "\n",
     "file_idx = 9\n",
-    "p = os.path.join(segmenter.phasedatapath, \"data_%d.h5\" % file_idx)\n",
+    "p = os.path.join(segmenter.phasesegmentationpath, \"data_%d.h5\" % file_idx)\n",
     "test_df = pd.read_hdf(p)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "len(test_df.index.unique(\"time_s\")"
    ]
   },
   {
@@ -575,13 +602,128 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "len(times)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "fig1, axes = plt.subplots(1, 15, figsize=(20, 10))\n",
     "for i, ax in enumerate(axes):\n",
-    "    ax.imshow(data[trench_idx, time_idx + i, :, :])\n",
+    "    ax.imshow(data[trench_idx, time_idx + i, :, :], cmap=\"inferno_r\")\n",
     "    ax.scatter(\n",
     "        test_df.loc[trench_idx, times[time_idx + i]][\"centy\"],\n",
     "        test_df.loc[trench_idx, times[time_idx + i]][\"centx\"],\n",
     "    )"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get division times"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Get lineage single-cell growth rates"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from trenchripper.DetectPeaks import detect_peaks"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import scipy.signal as signal"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mother_cell = test_df.loc[trench_idx, :, 1]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "major_axis_length = np.array(mother_cell[\"major_axis_length\"])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.plot(major_axis_length)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mal_smoothed = signal.wiener(major_axis_length)\n",
+    "plt.plot(mal_smoothed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "mal_smoothed = signal.savgol_filter(major_axis_length, 5, 2)\n",
+    "plt.plot(mal_smoothed)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detect_peaks(major_axis_length, mpd=3, show=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detect_peaks(mal_smoothed, mpd=3, show=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "detect_peaks(mal_smoothed, mpd=3, show=True)"
    ]
   },
   {
